--- a/photogram-riso-style.css
+++ b/photogram-riso-style.css
@@ -14,6 +14,7 @@ body {
   line-height: 1.5;
   background-image: url("assets/photogram-riso-background.jpg");
   background-size: cover, no-repeat;
+  margin: 0;
 }
 
 /* images and videos max out at full width */
@@ -63,6 +64,11 @@ a:hover{
   color: white;
 }
 
+.print img{
+  position: relative;
+  z-index: 2;
+}
+
 .first{
   display: flex;
   flex-direction: row;
@@ -108,5 +114,14 @@ a:hover{
   justify-content: flex-end;
 }
 
+.process img{
+  position: relative;
+  z-index: 12;
+  max-width: 20em;
+  max-height: 20em;
+}
 
-
+.process video{
+  max-width: 40em;
+  padding: -10em;
+}
