--- a/photogram-riso-style.css
+++ b/photogram-riso-style.css
@@ -1,4 +1,13 @@
-    /* default to border-box */
+@keyframes stretch {
+  from {
+   transform: scaleX(1);
+  }
+  to {
+    transform: scaleX(2);
+  }
+  } 
+ 
+ /* default to border-box */
 html {
   box-sizing: border-box;
   font-size: 16px;
@@ -33,12 +42,16 @@ video {
 
 .description{
   position: absolute;
-  top: 5em;
-  right:  0.15em;
+  display: flex;
+  justify-content: center;
   z-index:  11;
-  width:  30em;
-  background-image: url("assets/photogram-riso-background.jpg");
-  padding: .75em;
+  top: 26em;
+  background-color: yellow;
+  opacity: 0;
+}
+
+.description:hover{
+  opacity: 1;
 }
 
 h1{
@@ -46,12 +59,14 @@ h1{
   font-size: 2em;
   font-family: 'Averia Libre', cursive;
   padding:  0.15em;
+  animation: stretch 2s infinite alternate;
 }
 
 p{
   color: black;
-  font-size: 1em;
+  font-size: 1.5em;
   font-family: 'Averia Libre', cursive;
+  width: 40%;
 }
 
 a{
@@ -61,7 +76,11 @@ a{
 
 a:hover{
   text-decoration: underline;
-  color: white;
+  color: blue;
+}
+
+.print{
+  padding-bottom: 10em;
 }
 
 .print img{
@@ -121,7 +140,17 @@ a:hover{
   max-height: 20em;
 }
 
-.process video{
-  max-width: 40em;
-  padding: -10em;
+.videos video{
+  max-width: 60em;
+  clip-path: circle(8em at 165px);
+  margin-left: -10em;
+}
+
+.videos{
+  background-image: url("assets/photogram-riso-5.jpg");
+  background-size: cover, no-repeat;
+  margin-top: 5em;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: auto;
 }
