--- a/about-style.css
+++ b/about-style.css
@@ -14,7 +14,7 @@ body {
 }
 
 h1{
-  color: white;
+  color: #fd5c14;
   text-decoration: none;
   font-size: 4em;
   font-family: "Terminal Grotesque";
