--- a/about-style.css
+++ b/about-style.css
@@ -5,66 +5,188 @@
        url("./fonts/terminal-grotesque-webfont.woff") format("woff");
 }    
 
-
-
-body {
-  margin: 1rem;
-  font-family: sans-serif;
-  background-color: #fd5c14;
+body{
+  background-color: #00a306;
+background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23fd5c14' fill-opacity='1'%3E%3Cpath opacity='.5' d='M96 95h4v1h-4v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9zm-1 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9z'/%3E%3Cpath d='M6 5V0H5v5H0v1h5v94h1V6h94V5H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 }
 
-h1{
-  color: #00a306;
-  text-decoration: none;
-  font-size: 6em;
-  font-family: "Terminal Grotesque";
-  line-height: 1.5em;
-  margin-left: 3em;
-}
-
-p{
-  color: blue;
-  font-family: "Terminal Grotesque";
-  font-size: 2em;
-  display: wrap;
-}
-
-img{
-  margin-top: 2em;
-  max-width: 20em;
-}
-
-.top-nav{
-  display: flex;
-  justify-content: space-between;
+.picker{
   position: fixed;
-  top: 1em;
-  right: 1em;
+  top: 3em;
   left: 1em;
-  z-index: 100;
+  z-index: 1000;
 }
 
-.bottom-nav{
+.text{
+  display: grid;
+  grid-template-columns: 1fr 1fr 2fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: auto;
+  align-items: center;
+  column-gap: 3em;
+  column-width: 50em;
+}
+
+.esc img{
+  max-width: 30em;
+  padding: .5em;
+}
+
+
+.index{
   display: flex;
-  justify-content: space-between;
-  height: auto;
-  position: fixed;
-  bottom: 1em;
-  right: 1em;
-  left: 1em;
-  z-index: 100;
+  justify-items: center;
+  max-width: 100%;
+  justify-content: center;
+  /* transform: scale(.8); */
+  margin-top: 0;
 }
 
-a{
-  color: white;
-  text-decoration: none;
-  font-size: 1.5em;
-  font-family: "Terminal Grotesque";
-  line-height: 1.5em;
+
+.link, .hover img{
+  max-width: 10em;
 }
 
-a:hover{
+.title{
+  font-family: Arial;
+  font-weight: 800;
+  font-style: italic;
+  color: transparent;
+  -webkit-text-stroke-width:3px;
+  -webkit-text-stroke-color: #ff5cfb;
+  font-size: 4em;
+}
+
+.backwards{
+  -webkit-transform:rotate(-180deg);
+-moz-transform:rotate(-180deg);
+-o-transform:rotate(-180deg);
+transform:rotate(-180deg);
+  padding: .25em;
+  display: inline-block;
+}
+
+.p1{
+  font-family: 'Averia Libre', cursive;
+  font-size: 2.5em;
+  color: #03a0f3;
+  margin-right: -10em;
+  -webkit-text-stroke-width:.8px;
+  -webkit-text-stroke-color: #fd5c14;
+}
+
+.p2{
+  font-family: 'Teko', sans-serif;
+  font-size: 5em;
+  width: 20em;
+  color: #fd5c14;
+  -webkit-text-stroke-width:.5px;
+  -webkit-text-stroke-color: #00a306;
+  transform: rotateZ(20deg);
+  padding: 0;
+  margin-right: 1em;
+}
+
+.p3{
+  font-family: 'Rajdhani', sans-serif;
+  font-size: 4em;
+  font-weight: 800;
   color: #fe0bdc;
-  text-decoration: underline;
+  margin-left: -20em;
+  margin-top: 6em;
+  margin-right: 6em;
 }
 
+.p4{
+  font-family: 'Jost', sans-serif;
+  font-size: 4.5em;
+  color: #03a0f3;
+  margin-right: -7em;
+  margin-left: -5em;
+  font-weight: 700;
+}
+
+.p5{
+  font-family: 'Genos', sans-serif;
+  font-size: 5em;
+  color: #ff5cfb;
+  line-height: .9em;
+  margin-left: -5em;
+}
+
+.p6{
+  font-family: 'Chakra Petch', sans-serif;
+  font-size: 2em;
+  color: #fd5c14;
+}
+
+.p7{
+  font-family: 'Archivo Black', sans-serif;
+  font-size: 1.5em;
+  color: #fd5c14;
+}
+
+.p8{
+  font-family: 'Changa', sans-serif;
+  font-size: 2em;
+  color: #fd5c14;
+}
+
+.p9{
+  font-family: 'Special Elite', cursive;
+  font-size: 1.5em;
+  color: #fe0bdc;
+  width: 20em;
+  margin-top: -7em;
+}
+
+.p10{
+  font-family: 'Concert One', cursive;
+  font-size: 2em;
+  -webkit-text-stroke-width:2px;
+  -webkit-text-stroke-color: #ff5cfb;
+  width: 20em;
+  margin-top: 5em;
+  margin-left: -7em;
+  color: transparent;
+}
+
+.p11{
+  font-family: 'Road Rage', cursive;
+  font-size: 2.5em;
+  -webkit-text-stroke-width:.5px;
+  -webkit-text-stroke-color: #fd5c14;
+  margin-left: -7em;
+  width: 8em;
+  color: #03a0f3;
+}
+
+.p12{
+  font-family: 'Press Start 2P', cursive;
+  font-size: 1em;
+  line-height: 1.5em;
+  -webkit-text-stroke-width:1px;
+  -webkit-text-stroke-color: #fe0bdc;
+  width: 43em;
+  color: transparent;
+}
+
+.p13{
+  font-family: 'Bungee', cursive;
+  font-size: 2em;
+  color: #fd5c14;
+  -webkit-text-stroke-width:.5px;
+  -webkit-text-stroke-color: #03a0f3;
+  width: 17em;
+}
+
+.p14 img{
+  max-width: 60em;
+  padding: .5em;
+  mix-blend-mode: overlay;
+  margin-right: 10em;
+  cursor: url("assets/index-cursor.png"), auto;
+}
+
+.p14:hover{
+  transform: scale(.98);
+}
