--- a/about-style.css
+++ b/about-style.css
@@ -5,9 +5,16 @@
        url("./fonts/terminal-grotesque-webfont.woff") format("woff");
 }    
 
+
+@keyframes example {
+  from {transform: rotate3d(0, 0, 0, 0deg)}
+  to {transform: rotate3d(1, -5, 1, 40deg)}
+}
+
 body{
   background-color: #00a306;
 background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23fd5c14' fill-opacity='1'%3E%3Cpath opacity='.5' d='M96 95h4v1h-4v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9zm-1 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9z'/%3E%3Cpath d='M6 5V0H5v5H0v1h5v94h1V6h94V5H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+width: auto;
 }
 
 .picker{
@@ -24,6 +31,13 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
   align-items: center;
   column-gap: 3em;
   column-width: 50em;
+}
+
+.mobile{
+  font-family: 'Archivo Black', sans-serif;
+  font-size: 1.5em;
+  color: #fe0bdc;
+  display: none;
 }
 
 .esc img{
@@ -76,14 +90,14 @@ transform:rotate(-180deg);
 
 .p2{
   font-family: 'Teko', sans-serif;
-  font-size: 5em;
+  font-size: 3em;
   width: 20em;
   color: #fd5c14;
   -webkit-text-stroke-width:.5px;
   -webkit-text-stroke-color: #00a306;
   transform: rotateZ(20deg);
   padding: 0;
-  margin-right: 1em;
+  margin-left: 7em;
 }
 
 .p3{
@@ -91,7 +105,7 @@ transform:rotate(-180deg);
   font-size: 4em;
   font-weight: 800;
   color: #fe0bdc;
-  margin-left: -20em;
+  margin-left: -15em;
   margin-top: 6em;
   margin-right: 6em;
 }
@@ -189,4 +203,28 @@ transform:rotate(-180deg);
 
 .p14:hover{
   transform: scale(.98);
+}
+
+@media screen and (max-width: 55em){
+  body{
+    width: 100%;
+  }
+
+  .mobile{
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    width: 75%;
+    margin-top: 13em;
+    margin-left: 2em;
+    animation-name: example;
+    animation-duration: 3s;
+    animation-timing-function: ease;
+    animation-iteration-count:infinite;
+    animation-direction: alternate-reverse;
+  }
+
+  .text{
+  display: none;
+}
 }
