escape mobile animation

--- a/about-style.css
+++ b/about-style.css
@@ -6,9 +6,9 @@
 } 
 
 @font-face {
-  font-family: "Typefesse Claire";
-  src: url("./fonts/typefesse_claire-obscure.woff2") format("woff2"),
-       url("./fonts/typefesse_claire-obscure.woff") format("woff");
+  font-family: "Typefesse Pleine";
+  src: url("./fonts/typefesse_pleine.woff2") format("woff2"),
+       url("./fonts/typefesse_pleine.woff") format("woff");
 } 
 
 
@@ -16,6 +16,30 @@
   from {transform: rotate3d(0, 0, 0, 0deg)}
   to {transform: rotate3d(1, -5, 1, 40deg)}
 }
+
+/* for Firefox */
+@-moz-keyframes my-animation {
+  from { -moz-transform: translateX(100%); }
+  to { -moz-transform: translateX(-100%); }
+}
+
+/* for Chrome */
+@-webkit-keyframes my-animation {
+  from { -webkit-transform: translateX(100%); }
+  to { -webkit-transform: translateX(-100%); }
+}
+
+@keyframes my-animation {
+  from {
+    -moz-transform: translateX(100%);
+    -webkit-transform: translateX(100%);
+    transform: translateX(100%);
+  }
+  to {
+    -moz-transform: translateX(-100%);
+    -webkit-transform: translateX(-100%);
+    transform: translateX(-100%);
+  }}
 
 body{
   background-color: #00a306;
@@ -40,7 +64,7 @@ width: auto;
 }
 
 .mobile{
-  font-family: 'Typefesse Claire';
+  font-family: 'Typefesse PLeine';
   font-size: 2em;
   color: #fe0bdc;
   display: none;
@@ -234,4 +258,18 @@ transform:rotate(-180deg);
   .text{
   display: none;
 }
+
+#banner p{
+  /* animation properties */
+  -moz-transform: translateX(100%);
+  -webkit-transform: translateX(100%);
+  transform: translateX(100%);
+  
+  -moz-animation: my-animation 15s linear infinite;
+  -webkit-animation: my-animation 15s linear infinite;
+  animation: my-animation 15s linear infinite;
+  animation-timing-function: ease;
+}
+
+
 }
