--- a/index-style.css
+++ b/index-style.css
@@ -20,6 +20,7 @@ body{
   margin: 0;
   cursor: url("assets/index-cursor.png"), auto;
   transform: scale(1);
+  transition: 1s;
   display: flex;
   justify-content: center;
   justify-items: center;
@@ -46,6 +47,7 @@ body{
   max-width: 100%;
   justify-content: center;
   transform: scale(.8);
+  transition: 1s;
   margin-top: 0;
 }
 
