--- a/photogram-style.css
+++ b/photogram-style.css
@@ -44,6 +44,7 @@ html {
 body {
   background-color: blue;
   margin: 0;
+  width: 100%;
 }
 
 img{
@@ -242,6 +243,7 @@ span.scan-word{
   color: yellow;
   font-weight: 100;
   text-transform: uppercase;
+  width: 100%;
 }
 
 a{
