--- a/projects-style.css
+++ b/projects-style.css
@@ -6,7 +6,6 @@
 }    
 
 
-
 body {
   margin: 1rem;
   font-family: sans-serif;
@@ -30,6 +29,74 @@ body {
 a:hover{
   color: #fe0bdc;
   text-decoration: underline;
+}
+
+.info{
+  font-family: 'Terminal Grotesque';
+  font-size: 5em;
+  width: auto;
+  background-color: #edff47;
+  border-radius: 10px;
+  border: 1px solid #03a0f3;
+  color: #03a0f3;
+  transform: scale(1);
+  transition: .5s;
+}
+
+.info:hover{
+  transform: scale(.95);
+  transition: .5s;
+}
+
+.container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  position: fixed;
+  top: 2em;
+  z-index: 1000;
+}
+
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  z-index: 1000;
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 .index{
