--- a/user-style.css
+++ b/user-style.css
@@ -2,27 +2,60 @@
   font-family: "Anthony";
   src: url("./fonts/Anthony.woff2") format("woff2"),
        url("./fonts/Anthony.woff") format("woff");
-}    
+} 
+
+#background-video {
+  width: 100%;
+  height: 5em;
+  object-fit: cover;
+}
 
 /* adjust typography defaults */
 body {
   margin: 1rem;
-  background-color: #fe0bdc;
+  background-color: #03a0f3;
 }
 
 img, video{
+  mix-blend-mode: exclusion;
+}
+
+img:hover, video:hover{
   mix-blend-mode: normal;
 }
 
-.top-nav a, .bottom-nav a{
-  color: #00a306;
+.top-nav p, .link{
+  color: white;
   text-decoration: none;
   font-size: 1.5em;
   font-family: "Terminal Grotesque";
 }
 
+.button p{
+  color: white;
+  text-decoration: none;
+  font-family: "Terminal Grotesque";
+  margin: 0;
+}
+
+.button {
+  background-color: transparent;
+  border: none;
+}
+
+.top-nav p{
+  margin: 0;
+  margin-bottom: .5em;
+}
+
+.button p:hover, .link:hover{
+  color: #fe0bdc;
+  text-decoration: underline;
+}
+
+
 a:hover{
-  color: #03a0f3;
+  color: #fd5c14;
   text-decoration: underline;
 }
 
@@ -47,56 +80,89 @@ a:hover{
   z-index: 100;
 }
 
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 10em; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: #00a306; /* Fallback color */
+  background-color: rgba(0,163,6,0.4); /* Black w/ opacity */
+  z-index: 1000;
+}
+
+/* Modal Content */
+.modal-content {
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #fd5c14;
+  border-radius: 10px;
+  background-color: #00a306;
+  width: 35%;
+  font-family: 'Terminal Grotesque';
+  font-size: 1.25em;
+  color: white;
+}
+
+.modal-content p{
+  margin: 1em;
+}
+
+/* The Close Button */
+.close {
+  color: #fd5c14;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #03a0f3;
+  text-decoration: none;
+  cursor: url("assets/collage-logo-type-cursor.png"), auto;
+}
+
 header {
   display: flex;
   justify-content: center;
   justify-items: center;
+  width: 100%;
+  z-index: 1000;
+  text-align: center;
   }
 
   
-  nav li a{
-    color: #03a0f3;
+  h1{
+    color: #fd5c14;
     text-decoration: none;
     font-size: 3em;
     font-family: 'Anthony', sans-serif;
   }
-  
-  nav li a:hover{
-    font-size: 5em;
-    color: white;
+
+  .experiments{
+  margin: auto;
+  width: 100%;
   }
-  
-  nav {
-    display: inline-block;
-    margin-top: 3em;
-    }
 
-    nav ul li:nth-child(2) {
-      margin-left: 5em;
-      }
-    
-    
-    nav li {
-      display: inline-block;
-    }
-
-  
-    .one, .ten{
-      position: absolute;
-      top: 17em;
-      left: 10em;
-      transform: rotate(10deg);
-      max-width: 30em;
-      z-index: 3;
+    .ten{
+      background-image: url("assets/laser-cut-type-4.jpeg");
+  width: 100%;
+  height: 5em;
+  mix-blend-mode: exclusion;
+  padding: 1em;
     }
     
-    .two, .eleven{
-      position: absolute;
-      top: 14em;
-      left: 40em;
-      transform: rotate(-10deg);
-      max-width: 23em;
-      z-index: 4;
+    .eleven{
+  width: 100%;
+  height: 5em;
+  mix-blend-mode: exclusion;
+  padding: 1em;
     }
     
     .three, .twelve{
