--- a/projects-style.css
+++ b/projects-style.css
@@ -31,6 +31,7 @@ body {
   text-decoration: none;
   font-size: 1.5em;
   font-family: "Terminal Grotesque";
+  cursor: url("assets/collage-logo-type-cursor.png"), auto;
 }
 
 .instruction{
