--- a/submissions-style.css
+++ b/submissions-style.css
@@ -1,159 +1,101 @@
 @font-face {
-  font-family: "Lack Italic";
-  src: url("./fonts/lack-italic-webfont.woff2") format("woff2"),
-       url("./fonts/lack-italic-webfont.woff") format("woff");
+  font-family: "Kaerukaeru";
+  src: url("./fonts/kaerukaeru-regular.woff2") format("woff2"),
+       url("./fonts/kaerukaeru-regular.woff") format("woff");
 }    
 
 @font-face {
-  font-family: "Lack Line Italic";
-  src: url("./fonts/lack-line-italic-webfont.woff2") format("woff2"),
-       url("./fonts/lack-line-italic-webfont.woff") format("woff");
+  font-family: "Terminal Grotesque";
+  src: url("./fonts/terminal-grotesque-webfont.woff2") format("woff2"),
+       url("./fonts/terminal-grotesque-webfont.woff") format("woff");
 }    
 
-@font-face {
-  font-family: "Lack Line Regular";
-  src: url("./fonts/lack-line-regular-webfont.woff2") format("woff2"),
-       url("./fonts/lack-line-regular-webfont.woff") format("woff");
-}    
-
-@font-face {
-  font-family: "Lack Regular";
-  src: url("./fonts/lack-regular.woff2") format("woff2"),
-       url("./fonts/lack-regular.woff") format("woff");
-}    
 
 /* adjust typography defaults */
 body {
-  margin: 1rem;
+  margin: 0;
   background-image: url("assets/background-home.png");
+  background-size: cover;
+}
+
+video{
+  max-width: 100%;
 }
 
 img{
-  max-width:15em;
+  padding: 1em;
 }
 
-.top-nav a, .bottom-nav a{
-  color: white;
-  text-decoration: none;
-  font-size: 1.5em;
-  font-family: "Terminal Grotesque";
-}
+hr{
+  border: .5px solid #fd5c14;}
 
-a:hover{
-  color: #fe0bdc;
-  text-decoration: underline;
-}
-
-.top-nav{
+.clearfix{
   display: flex;
-  justify-content: space-between;
-  position: fixed;
-  top: 1em;
-  right: 1em;
-  left: 1em;
-  z-index: 100;
+  justify-content: space-evenly;
 }
 
-.bottom-nav{
-  display: flex;
-  justify-content: space-between;
-  height: auto;
-  position: fixed;
-  bottom: 1em;
-  right: 1em;
-  left: 1em;
-  z-index: 100;
-}
-
-.want{
-  font-family: 'Lack Regular', sans-serif;
-  font-size: 4em;
-  transform: rotate(5deg);
-  margin-left: 8em;
+button{
+  margin: auto;
   margin-top: 1em;
+  font-family: 'Terminal Grotesque';
+  font-size: 1.5em;
+  padding: .5em;
   color: white;
+  background-color: #00a306;
+  border-radius: 10px;
+  border: 1px solid #fd5c14;
+  transform: scale(1);
+  transition: .5s;
+  cursor: url("assets/collage-logo-type-cursor.png"), auto;
 }
 
-.want:hover, .to:hover, .escape:hover{
-  transform: rotate(0deg);
+button:hover{
+  transform: scale(.95);
+  transition: .5s;
+  background-color: #03a0f3;
 }
 
-.to{
-  font-family: 'Lack Italic', sans-serif;
-  font-size: 5em;
-  transform: rotate(10deg);
+.container{
+  width: 35%;
+  margin: auto;
   margin-top: 2em;
-  margin-left: 10em;
+  border: 1px solid #fd5c14;
+  border-radius: 10px;
+  background-color: #00a306;
+  padding: 20px;
+}
+
+label, p, li{
+  font-family: 'Terminal Grotesque';
+  font-size: 1.5em;
   color: white;
-}
-
-.escape{
-  font-family: 'Lack Line Italic', sans-serif;
-  transform: rotate3d(1, 1, 1, 45deg);
-  font-size: 7em;
-  margin-left: 9em;
-  color: white;
-}
-
-.submit{
-  max-width: 22em;
-  position: absolute;
-  top: 10em;
-  left: 4em;
-  transform: rotate(-5deg);
-}
-
-.requirements{
-  max-width: 40em;
-  position: absolute;
-  transform: rotate(-10deg);
-  top: 25em;
-  left: 5em;
 }
 
 p, li{
+  margin: 1em;
+}
+
+b{
+  font-weight: normal;
+}
+
+input{
+  background-color: #03a0f3;
+  border: 1px solid #fd5c14;
+  width: 100%;
+  margin-top: .5em;
+  margin-bottom: 1em;
+  height: 1.5em;
+}
+
+.fields{
+  margin: 1em;
+}
+
+.checked{
+ margin-left: 0;
+}
+
+p{
   color: white;
-  font-family: 'Lack Regular', sans-serif;
-  font-size: 1.4em;
-}
-
-.upload{
-  max-width: 40em;
-  transform: rotate(-15deg);
-  position: absolute;
-  top: 25em;
-  left: 4em;
-}
-
-.link img{
-  margin: 0;
-  cursor: url("assets/index-cursor.png"), auto;
-  transform: scale(1);
-  display: flex;
-  justify-content: center;
-  justify-items: center;
-  opacity: 1;
-  position: absolute;
-}
-
-.link img:hover{
-  opacity: 0;
-}
-
-
-.hover-link img:hover{
-  opacity: 1;
-  display: flex;
-  justify-content: center;
-  justify-items: center;
-  position: absolute;
-  margin: 0;
-}
-
-.hover{
-margin-left: 50em;
-}
-
-.hover:hover{
-  transform: scale(.95);
 }
