--- a/submissions-style.css
+++ b/submissions-style.css
@@ -56,7 +56,7 @@ button:hover{
 }
 
 .container{
-  width: 35%;
+  width: 45em;
   margin: auto;
   margin-top: 2em;
   border: 1px solid #fd5c14;
@@ -79,14 +79,6 @@ b{
   font-weight: normal;
 }
 
-input{
-  background-color: #03a0f3;
-  border: 1px solid #fd5c14;
-  width: 100%;
-  margin-top: .5em;
-  margin-bottom: 1em;
-  height: 1.5em;
-}
 
 .fields{
   margin: 1em;
@@ -98,4 +90,58 @@ input{
 
 p{
   color: white;
+}
+
+.site-form button:hover{ background-color: #000;}
+.fileupload{
+  position: relative;
+  overflow: hidden;
+  display: inline-block;
+  margin-bottom: 20px;
+  }
+button.uploadfile {
+    margin: auto;
+margin-top: 1em;
+font-family: 'Terminal Grotesque';
+font-size: 1.5em;
+padding: .5em;
+color: white;
+background-color: #00a306;
+border-radius: 10px;
+border: 1px solid #fd5c14;
+transform: scale(1);
+cursor: url("assets/collage-logo-type-cursor.png"), auto;
+z-index: 1000;
+}
+
+button.uploadfile:hover{
+transform: scale(.95);
+transition: .5s;
+background-color: #03a0f3;
+cursor: url("assets/collage-logo-type-cursor.png"), auto;
+}
+
+.fileupload input[type=file] {
+  /* font-size: 100px; */
+  position: absolute;
+  left: 0;
+  top:-1em;
+  opacity: 0;
+  height: 2em;
+  z-index: 200;
+  cursor: url("assets/collage-logo-type-cursor.png"), auto;
+}
+
+.windowPopup {
+display: none; /* Hidden by default */
+position: fixed; /* Stay in place */
+z-index: 1; /* Sit on top */
+padding-top: 150px; /* Location of the box */
+left: 0;
+top: 0;
+width: 100%; /* Full width */
+height: 100%; /* Full height */
+overflow: auto; /* Enable scroll if needed */
+background-color: rgb(0,0,0); /* Fallback color */
+background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
